--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   </head>
   <body>
     <header class="page-header">
-      <img class="logo src="" alt="Логотип Седона." width="140" height="70">
+      <a class="header-logo">
+      <img src="" alt="Логотип Седона." width="140" height="70">
+      </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class=navigation-link href="index.html">Главная</a>
+            <a class=navigation-link>Главная</a>
           </li>
           <li class="navigation-item">
             <a class=navigation-link href="#">О Седоне</a>
@@ -24,17 +26,11 @@
       <ul class="user menu-list">
         <li class="user menu-item">
           <a class="user menu-link" href="#">
-            <span class="visually-hidden">
-            Поиск
-          </span>
             <span class="visually-hidden">Поиск</span>
           </a>
         </li>
         <li class="user menu-item">
           <a class="user menu-link" href="#">
-            <span class="visually-hidden">
-            Избранное
-          </span>
             <span class="favourites-value">12</span>
             <span class="visually-hidden">Избранное</span>
           </a>
