Итоговая разметка главной страницы
Подправил согласно указанием Сергея

--- a/index.html
+++ b/index.html
@@ -36,17 +36,15 @@
           </a>
         </li>
         <li class="user menu-item">
-          <form action="" target="_blank">
-            <button>ХОЧУ СЮДА!</button>
+            <a href="#">ХОЧУ СЮДА!</a>
           </form>
         </li>
       </ul>
     </nav>
-
-    </header>
+  </header>
     <main class="main-index">
-      <section class="visually-hidden">Добро пожаловать в Седону">
-        <img class="welcome" scr="" alt="Логотип города Седона">
+      <section>
+        <img class="welcome" scr="" alt="Добро пожаловать в Седону">
       </section>
       <section>
        <h1 class="welcome-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
@@ -57,6 +55,7 @@
         <ul class="advantages-list">
           <li class="advantages-item-picture-with-right">
            <div class="advantages-item-container">
+            <img class="#" width="#"height="#" alt="Городок Седона"
              <h3 class="advantages-item-title">Настоящий городок</h3>
              <p class="advantages-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
            </div>
@@ -84,8 +83,9 @@
           </li>
           <li class="advantages-item-picture-with-left">
              <div class="advantages-item-container">
-               <h3 class="advantages-item-title">Настоящий городок</h3>
-               <p class="advantages-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <img class="#" width="#"height="#" alt="Мост Дьявола"
+               <h3 class="advantages-item-title">Там есть мост дьявола</h3>
+               <p class="advantages-item-description">Да, по нему можно пройти! Если Вы осмелитесь, разумеется.</p>
              </div>
              <div class="advantages-image-container">
                <img class="advantages-image" src="" alt="#" width="#">
@@ -101,28 +101,22 @@
       <h3 class="visually-hidden">Услуги и сервис</h3>
         <ul class="services-list">
           <li class="services-item">
-            <div class="services-item-container">
               <h3 class="services-item-title">ЖИЛЬЕ</h3>
               <p class="services-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-            </div>
             <div class="services-image-container">
               <img class="#" src="" alt="Картинка дома" width="#" height="#">
             </div>
            </li>
            <li class="services-item">
-            <div class="services-item-container">
               <h3 class="services-item-title">ЕДА</h3>
               <p class="services-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-            </div>
             <div class="services-image-container">
               <img class="#" src="" alt="Картинка бургера" width="#" height="#">
             </div>
            </li>
            <li class="services-item">
-            <div class="services-item-container">
               <h3 class="services-item-title">СУВЕНИРЫ</h3>
               <p class="services-item-description">Не только китайского,но и настоящего местного производства!</p>
-            </div>
             <div class="services-image-container">
               <img class="#" src="" alt="Картинка подарочной коробки с бантом" width="#" height="#">
             </div>
@@ -133,7 +127,7 @@
         <h2 class="hotel-search-title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
           <p class="hotel-search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <form action="" target="_blank">
-              <button>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+              <button type="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
             </form>
       </section>
       <section class="subscription">
