--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
              <p class="advantages-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
            </div>
            <div class="advantages-image-container">
-             <img class="advantages-image" src="" alt="#" width="#">
+             <img class="advantages-image" src="img/realcity.jpg" alt="городок седона" width="800px" height="385px" align="right">
            </div>
           </li>
           <li class="advantages-item">
