в главную страницу добавил изобрадения

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a class="header-logo">
-      <img src="" alt="Логотип Седона." width="140" height="70">
+      <img src="img/logo.svg" alt="Логотип Седона." width="138px" height="64px">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -26,11 +26,13 @@
       <ul class="user menu-list">
         <li class="user menu-item">
           <a class="user menu-link" href="#">
+            <img src="img/search.svg" alt="Поиск" width="20px" height="20px">
             <span class="visually-hidden">Поиск</span>
           </a>
         </li>
         <li class="user menu-item">
           <a class="user menu-link" href="#">
+            <img src="img/heart.svg" alt="Избранное" width="20px" height="20px">
             <span class="favourites-value">12</span>
             <span class="visually-hidden">Избранное</span>
           </a>
@@ -44,7 +46,9 @@
   </header>
     <main class="main-index">
       <section>
-        <img class="welcome" scr="" alt="Добро пожаловать в Седону">
+        <img class="welcome" src="img/welcome.svg"  alt="Добро пожаловать в Седону" width="187.7 px" height="44.7 px">
+        <img class="gorgeous" src="img/gorgeous.svg" alt="Добро пожаловать в Седону"  width="256 px" height="28.78 px">
+        <img class="sedonagrand" src="img/sedonagrand.svg" alt="Добро пожаловать в Седону"  width="456 px" height="212 px">
       </section>
       <section>
        <h1 class="welcome-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
@@ -88,7 +92,7 @@
                <p class="advantages-item-description">Да, по нему можно пройти! Если Вы осмелитесь, разумеется.</p>
              </div>
              <div class="advantages-image-container">
-               <img class="advantages-image" src="" alt="#" width="#">
+               <img class="advantages-image" src="img/canyon.jpg" alt="Мост дьявола" width="800 px" height="385 px" align="left">
              </div>
           </ul>
      </section>
@@ -104,21 +108,21 @@
               <h3 class="services-item-title">ЖИЛЬЕ</h3>
               <p class="services-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             <div class="services-image-container">
-              <img class="#" src="" alt="Картинка дома" width="#" height="#">
+              <img src="img/house.svg" alt="Жилье" width="75 px" height="72 px"
             </div>
            </li>
            <li class="services-item">
               <h3 class="services-item-title">ЕДА</h3>
               <p class="services-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             <div class="services-image-container">
-              <img class="#" src="" alt="Картинка бургера" width="#" height="#">
+              <img src="img/burger.svg" alt="бургер" width="75 px" height="72 px"
             </div>
            </li>
            <li class="services-item">
               <h3 class="services-item-title">СУВЕНИРЫ</h3>
               <p class="services-item-description">Не только китайского,но и настоящего местного производства!</p>
             <div class="services-image-container">
-              <img class="#" src="" alt="Картинка подарочной коробки с бантом" width="#" height="#">
+              <img src="img/gift.svg" alt="Подарок" width="75 px" height="72 px"
             </div>
            </li>
     </section>
@@ -127,7 +131,7 @@
         <h2 class="hotel-search-title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
           <p class="hotel-search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <form action="" target="_blank">
-              <button type="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+              <button type="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ"></a></button>
             </form>
       </section>
       <section class="subscription">
